quay/quay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay

spec:
  type: ClusterIP
  selector:
    app: quay
  ports:
    - name: http
      port: 80
      targetPort: http
